# SecondOrder

./: .env.example  .gitignore  README.md  RESEARCH_CONSTITUTION.md  TESTS.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py
backend/: .env.example  pyproject.toml
backend/app/: config.py  llm_client.py  main.py
backend/app/agents/: analyzer_agent.py  base.py  orchestrator.py  scraper_agent.py  search_agent.py  url_selector.py
backend/app/api/: deps.py
backend/app/api/routes/: models.py  research.py  sessions.py
backend/app/models/: events.py  execution.py  memory.py  schemas.py
backend/app/prompts/: prompts.json
backend/app/research_core/evidence/: __init__.py
backend/app/research_core/models/: __init__.py  interfaces.py
backend/app/research_core/scrape/: __init__.py  service.py
backend/app/services/: embeddings_local.py  execution_compiler.py  logger.py  memory_chroma.py  search_executor.py  streaming.py  supabase.py
backend/app/tools/: brave_search.py  content_extractor.py  hasdata_scraper.py  scrape_cache.py  search_provider.py  web_utils.py
backend/benchmarks/: base.py  deepsearchqa.py  draco.py  research_rubrics.py  run.py
backend/scripts/: init_db.sql  test_extractor_cache.py
backend/tests/: test_api.py  test_bug_fixes.py  test_content_extractor.py  test_env_safety.py  test_evidence_repository.py  test_extract_pipeline.py  test_hasdata_cache.py  test_hybrid_orchestrator.py  test_llm_client.py  test_orchestrator.py  test_orchestrator_scrape_adapter.py  test_prompt_store.py  test_reliability.py  test_scrape_service.py  test_search_executor.py  test_search_provider.py  test_sessions_snapshot.py
benchmarks/: deepsearchqa.py  draco.py  research_rubrics.py
(+62 files in other folders)
